--- a/react-client/src/components/rightbar/rightbar.css
+++ b/react-client/src/components/rightbar/rightbar.css
@@ -67,13 +67,13 @@
   flex-direction: column;
   padding: 0;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: flex-start;
 }
 
 .rightbarFollowings {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: flex-start;
 }
 
 .rightbarFollowing {
